--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,18 @@
         <p>Generated Text:</p>
         <p id="generatedText"></p>
     </div>
+    <div>
+        <p>Request Response Time:</p>
+        <p id="responseTime"></p>
+    </div>
+    <div>
+        <p>Generator Time:</p>
+        <p id="generatorTime"></p>
+    </div>
+    <div>
+        <p>Tokens per Second:</p>
+        <p id="tokensPerSecond"></p>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
